@@ -423,7 +423,7 @@ KeySym XStringToKeysym(const char *str);
 #undef USE_REAL_VERTICAL_FONT
 #endif
 #define NO_DISPLAY_FD
-#undef FLICK_SCROLL
+#define FLICK_SCROLL
 #define UIWINDOW_SUPPORTS_PREEDITING
 #define SELECTION_STYLE_CHANGEABLE
 
